<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">FingerPaint</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Меню</string>
    <string name="only_choose_figure_game">Выбор фигуры</string>
    <string name="only_choose_color_game">Выбор цвета</string>
    <string name="only_choose_letter_game">Выбор буквы</string>
    <string name="only_draw_figure_game">Рисование фигуры</string>
    <string name="only_draw_letter_game">Рисование буквы</string>
    <string name="figure_game">Игра: Фигуры</string>
    <string name="letter1_game">Игра: Буквы 1</string>
    <string name="letter2_game">Игра: Буквы 2</string>
    <string name="statistics">Статистика </string>
    <string name="choose_user">Выбор игрока</string>
    <string name="add_user">Добавить</string>
    <string name="ok">OK</string>
    <string name="name">Имя</string>
    <string name="set_user">Настройка</string>
    <string name="settings">Настройки</string>
    <string name="menu_recommendations">Рекоммендации</string>
    <string name="first_choose">First Choose</string>
    <string name="second_choose">Second Choose</string>
    <string name="empty_name_warning">Введите имя.</string>
    <string name="user_exists_warning">Уже есть такой игрок.</string>
    <string name="repeat">Повторить</string>
    <string name="exit">Выйти</string>
    <string name="success_message">Молодец!</string>
    <string name="fail_message">Попробуй еще раз</string>
    <string name="vibrate">Вибрация</string>
    <string name="finger_paint">Finger\nPaint</string>
    <string name="choose_figure">Выбор фигуры</string>
    <string name="choose_letter">Выбор буквы</string>
    <string name="choose_figure_color">Выбор цвета фигуры</string>
    <string name="choose_letter_color">Выбор цвета буквы</string>
    <string name="drawing_figure">Раскраска фигуры</string>
    <string name="contouring">Раскраска буквы</string>
    <string name="delete_user">Удалить</string>
    <string name="add_new_user_message">Добавьте новых пользователей</string>

    <string name="choose_figure_task">"Выбери %1$s"</string>
    <string name="choose_figure_color_task">Выбери %1$s фигуру</string>
    <string name="draw_figure_tack">Раскрась %1$s</string>
    <string name="choose_letter_task">Выбери букву %1$s</string>
    <string name="choose_letter_color_task">Выбери %1$s букву</string>
    <string name="letter_contouring_task">Закрась букву</string>
    <string name="sound">sound</string>
    <string name="logout">Выйти</string>
    <string name="export">Export</string>
    <string name="network_state_icon">network_state_icon</string>
    <string name="tasks_request_failed">Не удалось загрузить задания</string>
    <string name="extra_tasks">Доп.игры</string>
    <string name="start">Старт</string>
    <string name="choose_task_message">Выберите задания</string>
    <string name="color">color</string>
    <string name="menu">menu</string>
    <string name="export_permission_message">Сохранение картинок не разрешено. Пожалуйста, измените настройки для совершения операции.</string>
    <string name="no_internet_message">Проверьте интернет соединение</string>
</resources>
