<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_choose_user"
            android:icon="@drawable/ic_menu_choose_user"
            android:title="@string/choose_user" />
        <item
            android:id="@+id/nav_recommendations"
            android:icon="@drawable/ic_menu_recommendations"
            android:title="@string/menu_recommendations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>
