<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.cscenter.fingerpaint.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_choose"
        android:name="ru.cscenter.fingerpaint.ui.choose.ChooseFragment"
        android:label="@string/choose_user"
        tools:layout="@layout/fragment_choose"/>

    <fragment
        android:id="@+id/nav_set_user"
        android:name="ru.cscenter.fingerpaint.ui.setuser.SetUserFragment"
        android:label="@string/set_user"
        tools:layout="@layout/fragment_set_user"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.cscenter.fingerpaint.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_recommendations"
        android:name="ru.cscenter.fingerpaint.ui.recommendations.RecommendationsFragment"
        android:label="@string/menu_recommendations"
        tools:layout="@layout/fragment_recommendations"/>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="ru.cscenter.fingerpaint.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics">
        <action
            android:id="@+id/action_nav_statistics_to_nav_choose"
            app:destination="@id/nav_choose"
            app:popUpTo="@+id/nav_statistics"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_statistics_to_nav_recommendations"
            app:destination="@id/nav_recommendations"
            app:popUpTo="@+id/nav_statistics"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_statistics_to_nav_settings"
            app:destination="@id/nav_settings"
            app:popUpTo="@+id/nav_statistics"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_statistics_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@+id/nav_statistics"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
