<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_navigation"
    app:startDestination="@id/nav_choose_user">

    <fragment
        android:id="@+id/nav_choose_user"
        android:name="ru.cscenter.fingerpaint.ui.chooseuser.loading.LoadingChooseUserFragment"
        android:label="@string/choose_user"
        tools:layout="@layout/fragment_choose_user" />

    <fragment
        android:id="@+id/nav_add_user"
        android:name="ru.cscenter.fingerpaint.ui.setuser.AddUserFragment"
        android:label="@string/add_user"
        tools:layout="@layout/fragment_set_user" />

    <fragment
        android:id="@+id/nav_set_user"
        android:name="ru.cscenter.fingerpaint.ui.setuser.SetUserFragment"
        android:label="@string/set_user"
        tools:layout="@layout/fragment_set_user">
        <argument
            android:name="userId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

</navigation>
