<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_name_text_view"
            style="@style/HugeTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start" />

        <ImageView
            android:id="@+id/statistics_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_weight="0"
            android:contentDescription="@string/statistics"
            android:src="@drawable/statistics" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/figure_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:drawableStart="@drawable/figures"
            android:drawableLeft="@drawable/figures"
            android:text="@string/figure_game" />

        <Button
            android:id="@+id/letter1_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:drawableStart="@drawable/letters"
            android:drawableLeft="@drawable/letters"
            android:text="@string/letter1_game" />

        <Button
            android:id="@+id/letter2_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:drawableStart="@drawable/letters"
            android:drawableLeft="@drawable/letters"
            android:text="@string/letter2_game" />
    </LinearLayout>

</RelativeLayout>
